# iroha2-longevity-load-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: load-rs-push-from-release.yaml  sync-branches.yaml  update-dependencies-dev.yaml  update-dependencies-stable.yaml  update-dependencies.yaml
