[package]
name = "iroha2-longevity-load-rs"
version = 'version = "2.0.0-pre-rc.6"'
edition = "2021"

[dependencies]
rouille = "3.5.0"
serde_json = "1.0.73"
serde = "1.0.132"
structopt = "0.3.25"
color-eyre = "0.6.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
iroha_client = 'version = "2.0.0-pre-rc.6"'
iroha_data_model = 'version = "2.0.0-pre-rc.6"'

  [dependencies.chrono]
  version = "0.4"
  features = [ "serde" ]
